# Mo-phong-robot-6-bac-tu-do

./: .gitattributes  LICENSE  README.md
Robot_6DOF_Controller_GUI/: PackagingLog.html
Robot_6DOF_controller_GUI/: PackagingLog.html
Robot_6DOF_controller_GUI/for_redistribution_files_only/: readme.txt
Robot_6DOF_controller_GUI/for_testing/: requiredMCRProducts.txt
Robot_GUI/: PackagingLog.html
Robot_GUI/for_testing/: readme.txt
moveit_ws/: .gitignore
moveit_ws/src/ar2_robot/: CMakeLists.txt  package.xml
moveit_ws/src/ar2_robot/config/: joint_trajectory_controller.yaml
moveit_ws/src/ar2_robot/launch/: ar2_urdf.launch  display.launch  gazebo.launch
moveit_ws/src/ar2_robot/meshes/: CLaw_2.STL  Claw_1.STL  L1.STL  L5.STL  L6.STL
moveit_ws/src/ar2_robot/urdf/: ar2_robot.csv  ar2_robot.urdf
moveit_ws/src/moveit_ar2_sim/: .setup_assistant  CMakeLists.txt  package.xml
moveit_ws/src/moveit_ar2_sim/config/: ar2_robot.srdf  fake_controllers.yaml  gazebo_ar2_robot.urdf  joint_limits.yaml  new_ros_controllers.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
moveit_ws/src/moveit_ar2_sim/launch/: Robot_6DOF_node.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_6DOF_robot.launch  full_ar2_sim.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
moveit_ws/src/moveit_ar2_sim/scripts/: Calibrate.py  Cartesian_path.py  Detectobject.py  EE_tracker.py  IK_solver.py  node_set_predefined_pose.py  node_spawn_box_models_in_gazebo.py  wait_for_gazebo.py  wait_for_moveit.py
